--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dhbwka.wwi.vertsys.javaee</groupId>
-    <artifactId>jTodo</artifactId>
+    <artifactId>What2Eat</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>jTodo</name>
+    <name>What2Eat</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -77,3 +77,4 @@
     </build>
 
 </project>
+
